--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ My name is Wong Chee Yew. I am a student of Dunman High School. Currently in 1st
 <a href ="www.dhs.sg"> Dunman High School  </a>
 <img src="photo.jpg"/><ul>
 <p>These are the things I love the most </p> 
-<a href="https://lol.garena.com/home"> Playing Online Game</a>
+ <li>
+  <a href="https://lol.garena.com/home"> Playing Online Game</a></li>
 <li>Reading Books</li>
 <li>Travelling</li>
 </ul>
