--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE HTML>
 <html>
-<body>
-<h1> All About Me</h1>
-<title>
- This is my website <</title>
-<p>
-My name is Wong Chee Yew. I am a student of Dunman High School. Currently in 1st year high school. </p>
-<a href ="www.dhs.sg"> Dunman High School  </a>
-<img src="photo.jpg"/><ul>
-<p>These are the things I love the most </p> 
- <li>
-  <a href="https://lol.garena.com/home"> Playing Online Game</a></li>
-<li>Reading Books</li>
-<li>Travelling</li>
-</ul>
-</body>
+ <body>
+ <h1> All About Me</h1>
+ <title>
+ This is my website </title>
+ <p>My name is Wong Chee Yew. I am a student of <a href ="www.dhs.sg"> Dunman High School </a>
+. Currently in 1st year high school. </p>
+ <p>These are the things I love the most </p> 
+  <ul>
+   <li><a href="https://lol.garena.com/home"> Playing Online Game</a></li>
+   <li>Wactching Youtube</li>
+   <li>Sleeping</li>
+  </ul>
+ </body>
 </html>
