--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
  <h1> All About Me</h1>
  <title>
  This is my website </title>
- <p>My name is Wong Chee Yew. I am a student of <a href ="www.dhs.sg"> Dunman High School </a>
+ <p>My name is Wong Chee Yew. I am a student of <a href ="http://dunmanhigh.moe.edu.sg/"> Dunman High School </a>
 . Currently in 1st year high school. </p>
+  <h2> Interest</h2>
  <p>These are the things I love the most </p> 
   <ul>
    <li><a href="https://lol.garena.com/home"> Playing Online Game</a></li>
-   <li>Wactching Youtube</li>
+   <li>Wactching <a href ="https://www.youtube.com/"> Youtube </a></li>
    <li>Sleeping</li>
   </ul>
+  <h3> Accomplishment</h3>
  </body>
 </html>
