--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE HTML>
 <html>
  <body>
- <h1> All About Me</h1>
- <title>
- This is my website </title>
- <p>My name is Wong Chee Yew. I am a student of <a href ="http://dunmanhigh.moe.edu.sg/"> Dunman High School </a>
+ <title>This is my website </title>
+  <h1>All about me</h1>
+   <p>My name is Wong Chee Yew. I am a student of <a href ="http://dunmanhigh.moe.edu.sg/"> Dunman High School </a>
 . Currently in 1st year high school. </p>
   <h2> Interest</h2>
- <p>These are the things I love the most </p> 
-  <ul>
-   <li><a href="https://lol.garena.com/home"> Playing Online Game</a></li>
-   <li>Wactching <a href ="https://www.youtube.com/"> Youtube </a></li>
-   <li>Sleeping</li>
-  </ul>
-  <h3> Accomplishment</h3>
+   <p>These are the things I love the most </p> 
+    <ul>
+     <li><a href="https://lol.garena.com/home"> Playing Online Game</a></li>
+     <li>Wactching <a href="https://www.youtube.com/"> Youtube</a></li>
+     <li>Sleeping</li>
+    </ul>
  </body>
 </html>
