--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
      <li>Wactching <a href="https://www.youtube.com/"> Youtube</a></li>
      <li>Sleeping</li>
     </ul>
+  <img src="photo.jpg"/>
  </body>
 </html>
